migrate unit tests to junit 5